apollo-router/src/orbiter/snapshots/apollo_router__orbiter__test__create_report_invalid_validated_yaml.snap
---
source: apollo-router/src/orbiter/mod.rs
expression: report
---
session_id: "[session_id]"
version: "[version]"
platform:
  os: "[os]"
  continuous_integration: "[ci]"
usage:
  configuration.plugins.len: 0

